# rust-test-project

./: .gitignore  Cargo.toml  README.md  lorem_ipsum.txt
src/: algorithms.rs  conversion.rs  custom_types.rs  error_handle.rs  expression.rs  flow_of_control.rs  formats.rs  functions.rs  generics.rs  lib.rs  macros.rs  misc.rs  primitives.rs  random.rs  rsa.rs  serialize.rs  stds.rs  tests.rs  traits.rs  types.rs  variable_bindings.rs
