[package]
name = "my-project"
version = "0.1.0"
authors = ["Naturel Lee <1314carefully@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="1.0", features=["derive"]}
serde_json = "1.0"
bincode="1.2.1"
rand = "0.8.3"
openssl = "0.10.28"
